# Content-Based-Recommender

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
cbr/: cbr.py
cbr/user/: user.py
cbr/webapp/: __init__.py  routes.py
cbr/webapp/static/: index.js  style.css
examples/: README.md  irozhlas.py  mockup.py  requirements.txt
src/: __init__.py  config.py  main.py
src/item/: item.py
src/recommender/: recommender.py
src/storage/: __init__.py  storage.py
src/storage/storages/: irozhlas.py  mockup.py
src/user/: __init__.py  serializer.py  user.py
src/webapp/: __init__.py  controller.py  routes.py
src/webapp/static/: index.js
src/webapp/templates/: index.html
